# tree-sitter-markdown

./: .gitignore  Cargo.toml  LICENSE  README.md  devbox.json
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/md-depgraph/: Cargo.toml
crates/md-depgraph/src/: anchor.rs  extract.rs  graph.rs  lib.rs  resolve.rs  walker.rs
crates/md-depgraph/tests/: cli.rs  integration.rs
crates/md-depgraph/tests/fixtures/duplicates/: dup.md
crates/md-depgraph/tests/fixtures/multi/: a.md  b.md  broken.md  c.md
crates/md-depgraph/tests/fixtures/project/: impl.md  spec.md  tasks.md
