[workspace]
resolver = "2"
members = [
    "vendor/tree-sitter-markdown",
    "crates/md-depgraph",
]

[workspace.dependencies]
tree-sitter = "0.26"
tree-sitter-language = "0.1"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
